[package]
name = "mqute-codec"
description = "A full-featured implementation of MQTT protocol serialization in Rust, supporting versions 3.1, 3.1.1 and 5.0."
readme = "README.md"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/evgeniygem/mqute-codec"
keywords = ["iot", "mqtt", "embedded"]
categories = ["encoding", "network-programming"]
license = "MIT"

[dependencies]
bytes = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["codec"] }
bit_field = "0.10.1"